--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "homepage": "https://github.com/robinjmurphy/hubot-npm#readme",
   "devDependencies": {
     "eslint": "^2.11.1",
-    "mocha": "^2.5.3"
+    "lodash": "^4.13.1",
+    "mocha": "^2.5.3",
+    "supertest": "^1.2.0"
   }
 }
