Fix badge and express dep

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "body-parser": "^1.15.1",
     "eslint": "^2.11.1",
+    "express": "^4.13.4",
     "lodash": "^4.13.1",
     "mocha": "^2.5.3",
     "sinon": "^1.17.4",
