Add engines to package.json

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "posttest": "eslint .",
     "test": "mocha"
   },
+  "engines": {
+    "node": ">=4.0.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/robinjmurphy/hubot-npm.git"
